# rustify-ml

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOW_IT_WORKS.md  README.md  cli.cast  demo.cast  plan.md  pyo3.cfg  wow.cast
.github/workflows/: ci.yml
benches/: compare.py  python_vs_rust.rs  speedup.rs
examples/: bpe_tokenizer.py  data_pipeline.py  euclidean.py  image_preprocess.py  matrix_ops.py  pandas_apply.py  signal_processing.py  sklearn_scaler.py  slow_tokenizer.py
pypi/: README.md  pyproject.toml
pypi/rustify_ml/: __init__.py
rustify-stdlib/: Cargo.toml  README.md  build.rs  pyproject.toml
rustify-stdlib/benches/: speed.rs
rustify-stdlib/examples/: usage.py
rustify-stdlib/src/: lib.rs
src/: analyzer.rs  builder.rs  generator.rs  input.rs  lib.rs  main.rs  profiler.rs  utils.rs
src/generator/: expr.rs  infer.rs  mod.rs  render.rs  translate.rs
tests/: integration.rs  integration_cli.rs  test_all_fixtures.py
tests/snapshots/: euclidean_lib_rs.snap
