[package]
name = "rustify-ml"
version = "0.1.2"
edition = "2024"
description = "Profile Python hotspots and auto-generate Rust + PyO3 stubs via maturin"
license = "MIT"
repository = "https://github.com/homezloco/rustify-ml"
homepage = "https://github.com/homezloco/rustify-ml"
documentation = "https://github.com/homezloco/rustify-ml"
keywords = ["python", "pyo3", "ml", "accelerate", "profiler"]
categories = ["development-tools", "science", "command-line-utilities"]
readme = "README.md"

[workspace]
members = ["rustify-stdlib"]
exclude = ["dist/rustify_ml_ext"]

[[bin]]
name = "rustify-ml"
path = "src/main.rs"

[lib]
name = "rustify_ml"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
git2 = "0.18"
heck = "0.5"
rustpython-parser = "0.4.0"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "printing"] }
prettyplease = "0.2"
ndarray = { version = "0.16", optional = true }
tch = { version = "0.15", optional = true }

[features]
default = []
numpy-hint = ["ndarray"]
torch-hint = ["tch"]

[dev-dependencies]
anyhow = "1"
criterion = { version = "0.5", features = ["html_reports"] }
rustpython-parser = "0.4"
tempfile = "3"

[[bench]]
name = "speedup"
harness = false

[[bench]]
name = "python_vs_rust"
harness = false
