[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rustify-ml"
version = "0.1.2"
description = "Profile Python ML hotspots and auto-generate Rust PyO3 bindings. Install the CLI via: cargo install rustify-ml"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["rust", "pyo3", "ml", "accelerate", "profiler", "performance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/homezloco/rustify-ml"
Repository = "https://github.com/homezloco/rustify-ml"
"crates.io" = "https://crates.io/crates/rustify-ml"

[project.scripts]
rustify-ml = "rustify_ml:_cli_hint"

[tool.hatch.build.targets.wheel]
packages = ["rustify_ml"]
