[package]
name = "rustify-stdlib"
version = "0.1.1"
edition = "2024"
description = "Prebuilt Rust routines (PyO3) for Python acceleration"
license = "MIT"
repository = "https://github.com/homezloco/rustify-ml"
homepage = "https://github.com/homezloco/rustify-ml"
documentation = "https://github.com/homezloco/rustify-ml"
readme = "README.md"

[lib]
name = "rustify_stdlib"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "speed"
harness = false
